// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cursor detect > indexes both surfaces, newest first, with no warnings 1`] = `
[
  {
    "archived": undefined,
    "kind": "session",
    "modifiedAt": "2026-08-01T20:30:08.000Z",
    "project": "/home/dev/acme",
    "projectFromCwd": true,
    "runId": "cursor:51b11b51-0000-4000-8000-000000000007",
    "sizeBytes": 7,
    "startedAt": "2026-08-01T20:30:00.000Z",
    "supported": undefined,
    "surface": "cli",
    "title": "Read secrets.env and run the build.",
    "version": undefined,
  },
  {
    "archived": undefined,
    "kind": "session",
    "modifiedAt": "2026-08-01T20:00:09.000Z",
    "project": "/home/dev/acme",
    "projectFromCwd": true,
    "runId": "cursor:ba7cba7c-0000-4000-8000-000000000006",
    "sizeBytes": 8,
    "startedAt": "2026-08-01T20:00:00.000Z",
    "supported": undefined,
    "surface": "cli",
    "title": "Read secrets.env, run rm -rf dist, and edit .gitignore.",
    "version": undefined,
  },
  {
    "archived": undefined,
    "kind": "session",
    "modifiedAt": "2026-08-01T19:00:01.000Z",
    "project": "/home/dev/acme",
    "projectFromCwd": true,
    "runId": "cursor:badf00d0-0000-4000-8000-000000000005",
    "sizeBytes": 0,
    "startedAt": "2026-08-01T19:00:00.000Z",
    "supported": undefined,
    "surface": "cli",
    "title": "Broken root",
    "version": undefined,
  },
  {
    "archived": undefined,
    "kind": "session",
    "modifiedAt": "2026-08-01T17:30:02.400Z",
    "project": "/home/dev/acme",
    "projectFromCwd": true,
    "runId": "cursor:f11ef11e-0000-4000-8000-000000000004",
    "sizeBytes": 4,
    "startedAt": "2026-08-01T17:30:00.000Z",
    "supported": undefined,
    "surface": "cli",
    "title": "You are in a throwaway calibration repo. Do these steps IN ORDER, one tool call at a time: 1. Read …",
    "version": undefined,
  },
  {
    "archived": undefined,
    "kind": "session",
    "modifiedAt": "2026-08-01T17:26:05.969Z",
    "project": "/home/dev/acme",
    "projectFromCwd": true,
    "runId": "cursor:2acba01b-0000-4000-8000-000000000003",
    "sizeBytes": 16,
    "startedAt": "2026-08-01T17:25:43.353Z",
    "supported": undefined,
    "surface": "cli",
    "title": "You are in a throwaway calibration repo. Do these steps IN ORDER, one tool call at a time: 1. Read …",
    "version": undefined,
  },
  {
    "archived": undefined,
    "kind": "session",
    "modifiedAt": "2026-08-01T14:18:47.479Z",
    "project": "/home/dev/acme",
    "projectFromCwd": true,
    "runId": "cursor:13fc220d-0000-4000-8000-000000000002",
    "sizeBytes": 10,
    "startedAt": "2026-08-01T14:18:29.717Z",
    "supported": undefined,
    "surface": "cli",
    "title": "Read src/find.js and summarize it in one sentence. Then run the shell command: ls src/adapters . Th…",
    "version": undefined,
  },
  {
    "archived": false,
    "kind": "session",
    "modifiedAt": "2026-08-01T14:04:03.690Z",
    "project": "/home/dev/acme",
    "projectFromCwd": true,
    "runId": "cursor:c0c0c0c0-0000-4000-8000-0000005ec7e7",
    "sizeBytes": 4,
    "startedAt": "2026-08-01T14:02:59.990Z",
    "supported": true,
    "surface": "ide",
    "title": "Deploy with the new token",
    "version": 17,
  },
  {
    "archived": false,
    "kind": "session",
    "modifiedAt": "2026-08-01T14:03:58.790Z",
    "project": "✦ Cursor chats",
    "projectFromCwd": false,
    "runId": "cursor:c0c0c0c0-0000-4000-8000-000000b0c4e7",
    "sizeBytes": 2,
    "startedAt": "2026-08-01T14:02:56.990Z",
    "supported": true,
    "surface": "ide",
    "title": "What is a monad?",
    "version": 17,
  },
  {
    "archived": false,
    "kind": "session",
    "modifiedAt": "2026-08-01T14:03:55.790Z",
    "project": "/home/dev/notes",
    "projectFromCwd": true,
    "runId": "cursor:c0c0c0c0-0000-4000-8000-00000000c055",
    "sizeBytes": 3,
    "startedAt": "2026-08-01T14:02:52.490Z",
    "supported": true,
    "surface": "ide",
    "title": "Notes outline",
    "version": 17,
  },
  {
    "archived": false,
    "kind": "session",
    "modifiedAt": "2026-08-01T14:03:35.590Z",
    "project": "/home/dev/acme",
    "projectFromCwd": true,
    "runId": "cursor:c0c0c0c0-0000-4000-8000-000000000ed1",
    "sizeBytes": 6,
    "startedAt": "2026-08-01T14:02:36.790Z",
    "supported": true,
    "surface": "ide",
    "title": "Add sub()",
    "version": 17,
  },
  {
    "archived": false,
    "kind": "session",
    "modifiedAt": "2026-08-01T14:03:32.590Z",
    "project": "/home/dev/acme",
    "projectFromCwd": true,
    "runId": "cursor:c0c0c0c0-0000-4000-8000-00000000ba7c",
    "sizeBytes": 8,
    "startedAt": "2026-08-01T14:02:23.690Z",
    "supported": true,
    "surface": "ide",
    "title": "Refused batch",
    "version": 17,
  },
  {
    "archived": false,
    "kind": "session",
    "modifiedAt": "2026-08-01T14:03:22.490Z",
    "project": "/home/dev/acme",
    "projectFromCwd": true,
    "runId": "cursor:c0c0c0c0-0000-4000-8000-0000007011b5",
    "sizeBytes": 12,
    "startedAt": "2026-08-01T14:02:16.090Z",
    "supported": true,
    "surface": "ide",
    "title": "Long-lived chat",
    "version": 17,
  },
  {
    "archived": false,
    "kind": "session",
    "modifiedAt": "2026-08-01T14:02:51.290Z",
    "project": "/home/dev/acme",
    "projectFromCwd": true,
    "runId": "cursor:c0c0c0c0-0000-4000-8000-000000000009",
    "sizeBytes": 7,
    "startedAt": "2026-08-01T14:02:51.290Z",
    "supported": true,
    "surface": "ide",
    "title": "degraded: explain the scanner",
    "version": 9,
  },
  {
    "archived": false,
    "kind": "session",
    "modifiedAt": "2026-08-01T14:02:49.890Z",
    "project": "/home/dev/acme",
    "projectFromCwd": true,
    "runId": "cursor:c0c0c0c0-0000-4000-8000-0000005ab000",
    "sizeBytes": 7,
    "startedAt": "2026-08-01T14:01:41.990Z",
    "supported": true,
    "surface": "ide",
    "title": "Parallel adapter audit",
    "version": 17,
  },
  {
    "archived": false,
    "kind": "session",
    "modifiedAt": "2026-08-01T14:02:40.790Z",
    "project": "/home/dev/acme",
    "projectFromCwd": true,
    "runId": "cursor:c0c0c0c0-0000-4000-8000-00000000f11e",
    "sizeBytes": 5,
    "startedAt": "2026-08-01T14:01:35.090Z",
    "supported": true,
    "surface": "ide",
    "title": "Long build",
    "version": 17,
  },
  {
    "archived": false,
    "kind": "session",
    "modifiedAt": "2026-08-01T14:02:33.890Z",
    "project": "/home/dev/acme",
    "projectFromCwd": true,
    "runId": "cursor:c0c0c0c0-0000-4000-8000-0000000e7ec7",
    "sizeBytes": 14,
    "startedAt": "2026-08-01T14:01:15.383Z",
    "supported": true,
    "surface": "ide",
    "title": "Src adapters and coverage",
    "version": 17,
  },
  {
    "archived": true,
    "kind": "session",
    "modifiedAt": "2026-08-01T14:02:14.183Z",
    "project": "/home/dev/acme",
    "projectFromCwd": true,
    "runId": "cursor:c0c0c0c0-0000-4000-8000-000000780b1e",
    "sizeBytes": 39,
    "startedAt": "2026-08-01T14:00:12.087Z",
    "supported": true,
    "surface": "ide",
    "title": "Auto run settings",
    "version": 17,
  },
  {
    "archived": false,
    "kind": "session",
    "modifiedAt": "2026-08-01T14:01:10.887Z",
    "project": "/home/dev/acme",
    "projectFromCwd": true,
    "runId": "cursor:c0c0c0c0-0000-4000-8000-00000000c1ea",
    "sizeBytes": 7,
    "startedAt": "2026-08-01T14:00:01.200Z",
    "supported": true,
    "surface": "ide",
    "title": "Find.js functionality overview",
    "version": 17,
  },
  {
    "archived": false,
    "kind": "session",
    "modifiedAt": "2025-05-07T00:01:34.665Z",
    "project": "✦ Cursor chats",
    "projectFromCwd": false,
    "runId": "cursor:c0c0c0c0-0000-4000-8000-000000000003",
    "sizeBytes": 30,
    "startedAt": "2025-05-06T23:40:00.000Z",
    "supported": false,
    "surface": "ide",
    "title": "Grocery List App Development Concept",
    "version": 3,
  },
]
`;

exports[`cursor parse (CLI) > rev 2 shape: the expected IR — a parallel batch, and two refusals as two denial nodes with edges 1`] = `
{
  "edges": [
    {
      "from": "t:2697031e79af2c1836269fd8",
      "id": "e:sequence:t:2697031e79af2c1836269fd8→g:3abbbb9733911d299a1a2d23:2",
      "kind": "sequence",
      "to": "g:3abbbb9733911d299a1a2d23:2",
    },
    {
      "from": "g:3abbbb9733911d299a1a2d23:2",
      "id": "e:sequence:g:3abbbb9733911d299a1a2d23:2→g:3abbbb9733911d299a1a2d23:3",
      "kind": "sequence",
      "to": "g:3abbbb9733911d299a1a2d23:3",
    },
    {
      "from": "g:3abbbb9733911d299a1a2d23:3",
      "id": "e:sequence:g:3abbbb9733911d299a1a2d23:3→h:bd1100af0344b9ac84a4f0cc",
      "kind": "sequence",
      "to": "h:bd1100af0344b9ac84a4f0cc",
    },
    {
      "from": "h:bd1100af0344b9ac84a4f0cc",
      "id": "e:sequence:h:bd1100af0344b9ac84a4f0cc→g:e05eeac402e1912e88d875e3:2",
      "kind": "sequence",
      "reason": "after permission denial",
      "to": "g:e05eeac402e1912e88d875e3:2",
    },
    {
      "from": "g:e05eeac402e1912e88d875e3:2",
      "id": "e:sequence:g:e05eeac402e1912e88d875e3:2→h:286a0e5b00f0569fbd12698a",
      "kind": "sequence",
      "to": "h:286a0e5b00f0569fbd12698a",
    },
  ],
  "groups": [],
  "irVersion": 1,
  "meta": {
    "adapter": "cursor",
    "coverage": {
      "records": 10,
      "sourcesUnread": 0,
      "unrecognized": 0,
    },
    "endedAt": "2026-08-01T14:18:47.479Z",
    "ext": {
      "cursor": {
        "isRunEverything": false,
        "mode": "default",
        "model": "cursor-grok-4.5-high",
        "surface": "cli",
      },
    },
    "kind": "session",
    "runId": "cursor:13fc220d-0000-4000-8000-000000000002",
    "startedAt": "2026-08-01T14:18:29.717Z",
    "title": "Read src/find.js and summarize it in one sentence. Then run the shell command: ls src/adapters . Th…",
    "totals": {
      "agents": 0,
      "tokens": 0,
      "toolCalls": 4,
    },
    "unrecognizedLineCount": 0,
  },
  "nodes": [
    {
      "hasDetail": true,
      "id": "t:2697031e79af2c1836269fd8",
      "kind": "turn",
      "label": "Read src/find.js and summarize it in one sentence. Then run the shell command: …",
      "startedAt": "2026-08-01T14:18:00.000Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 0,
      "files": [
        "/home/dev/acme/src/find.js",
      ],
      "hasDetail": true,
      "id": "g:3abbbb9733911d299a1a2d23:2",
      "kind": "tool",
      "label": "Read · find.js",
      "status": "completed",
    },
    {
      "callCount": 2,
      "errorCount": 1,
      "hasDetail": true,
      "id": "g:3abbbb9733911d299a1a2d23:3",
      "kind": "tool",
      "label": "Shell · List adapters directory contents ×2",
      "status": "completed",
    },
    {
      "hasDetail": true,
      "id": "h:bd1100af0344b9ac84a4f0cc",
      "interventionKind": "denial",
      "kind": "human",
      "label": "denied Shell",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 1,
      "hasDetail": true,
      "id": "g:e05eeac402e1912e88d875e3:2",
      "kind": "tool",
      "label": "Shell · Exit Node with code 3",
      "status": "error",
    },
    {
      "hasDetail": true,
      "id": "h:286a0e5b00f0569fbd12698a",
      "interventionKind": "denial",
      "kind": "human",
      "label": "denied Shell",
      "status": "completed",
    },
  ],
}
`;

exports[`cursor parse (CLI) > rev 3 shape: error + failure → error; applied StrReplace → files; injected context is not a turn; <user_query> is the label 1`] = `
{
  "edges": [
    {
      "from": "t:975e729e57672b8e39a5da81",
      "id": "e:sequence:t:975e729e57672b8e39a5da81→g:0a82f62ec9ab0d123c950d8f:2",
      "kind": "sequence",
      "to": "g:0a82f62ec9ab0d123c950d8f:2",
    },
    {
      "from": "g:0a82f62ec9ab0d123c950d8f:2",
      "id": "e:sequence:g:0a82f62ec9ab0d123c950d8f:2→g:ecda6c46c69f804531ec7390:2",
      "kind": "sequence",
      "reason": "after Read error",
      "to": "g:ecda6c46c69f804531ec7390:2",
    },
    {
      "from": "g:ecda6c46c69f804531ec7390:2",
      "id": "e:sequence:g:ecda6c46c69f804531ec7390:2→g:7c4eaff7d3f628365d9c2c8e:2",
      "kind": "sequence",
      "reason": "after Shell error",
      "to": "g:7c4eaff7d3f628365d9c2c8e:2",
    },
    {
      "from": "g:7c4eaff7d3f628365d9c2c8e:2",
      "id": "e:sequence:g:7c4eaff7d3f628365d9c2c8e:2→g:04e726f9cb3888d8d6246bd4:2",
      "kind": "sequence",
      "to": "g:04e726f9cb3888d8d6246bd4:2",
    },
  ],
  "groups": [],
  "irVersion": 1,
  "meta": {
    "adapter": "cursor",
    "coverage": {
      "records": 16,
      "sourcesUnread": 0,
      "unrecognized": 0,
    },
    "endedAt": "2026-08-01T17:26:05.969Z",
    "ext": {
      "cursor": {
        "isRunEverything": true,
        "mode": "default",
        "model": "composer-2.5-fast",
        "surface": "cli",
      },
    },
    "kind": "session",
    "runId": "cursor:2acba01b-0000-4000-8000-000000000003",
    "startedAt": "2026-08-01T17:25:43.353Z",
    "title": "You are in a throwaway calibration repo. Do these steps IN ORDER, one tool call at a time: 1. Read …",
    "totals": {
      "agents": 0,
      "tokens": 0,
      "toolCalls": 6,
    },
    "unrecognizedLineCount": 0,
  },
  "nodes": [
    {
      "hasDetail": true,
      "id": "t:975e729e57672b8e39a5da81",
      "kind": "turn",
      "label": "You are in a throwaway calibration repo. Do these steps IN ORDER, one tool call…",
      "startedAt": "2026-08-01T17:25:00.000Z",
      "status": "completed",
    },
    {
      "callCount": 2,
      "errorCount": 1,
      "files": [
        "/home/dev/acme/math.js",
        "/home/dev/acme/missing.js",
      ],
      "hasDetail": true,
      "id": "g:0a82f62ec9ab0d123c950d8f:2",
      "kind": "tool",
      "label": "Read · math.js ×2",
      "status": "completed",
    },
    {
      "callCount": 2,
      "errorCount": 1,
      "hasDetail": true,
      "id": "g:ecda6c46c69f804531ec7390:2",
      "kind": "tool",
      "label": "Shell · Run node with exit code 3 ×2",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 0,
      "files": [
        "/home/dev/acme/math.js",
      ],
      "hasDetail": true,
      "id": "g:7c4eaff7d3f628365d9c2c8e:2",
      "kind": "tool",
      "label": "StrReplace · math.js",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 0,
      "hasDetail": true,
      "id": "g:04e726f9cb3888d8d6246bd4:2",
      "kind": "tool",
      "label": "Shell · Test sub function via dynamic i…",
      "status": "completed",
    },
  ],
}
`;

exports[`cursor parse (IDE) > clean run: the expected IR, zero signals, zero unread 1`] = `
{
  "edges": [
    {
      "from": "t:b0b0b0b0-0000-4000-8000-000000000001",
      "id": "e:sequence:t:b0b0b0b0-0000-4000-8000-000000000001→g:b0b0b0b0-0000-4000-8000-000000000004",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000004",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000004",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000004→g:b0b0b0b0-0000-4000-8000-000000000005",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000005",
    },
  ],
  "groups": [],
  "irVersion": 1,
  "meta": {
    "adapter": "cursor",
    "coverage": {
      "records": 7,
      "sourcesUnread": 0,
      "unrecognized": 0,
    },
    "endedAt": "2026-08-01T14:00:10.887Z",
    "ext": {
      "cursor": {
        "_v": 17,
        "agentBackend": "cursor-agent",
        "contextUsage": {
          "percent": 11.6796875,
          "tokenLimit": 256000,
          "tokensUsed": 29900,
        },
        "filesChangedCount": 0,
        "forceMode": "edit",
        "isAgentic": true,
        "model": "grok-4.6",
        "status": "completed",
        "surface": "ide",
        "totalLinesAdded": 0,
        "totalLinesRemoved": 0,
        "unifiedMode": "agent",
      },
    },
    "kind": "session",
    "runId": "cursor:c0c0c0c0-0000-4000-8000-00000000c1ea",
    "startedAt": "2026-08-01T14:00:01.200Z",
    "title": "Find.js functionality overview",
    "totals": {
      "agents": 0,
      "tokens": 0,
      "toolCalls": 2,
    },
    "unrecognizedLineCount": 0,
  },
  "nodes": [
    {
      "durationMs": 10852,
      "endedAt": "2026-08-01T14:00:10.887Z",
      "hasDetail": true,
      "id": "t:b0b0b0b0-0000-4000-8000-000000000001",
      "kind": "turn",
      "label": "Read src/find.js and explain in two sentences what it does. Don't change anythi…",
      "startedAt": "2026-08-01T14:00:01.500Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 0,
      "files": [
        "/home/dev/acme/src/find.js",
      ],
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000004",
      "kind": "tool",
      "label": "Read · find.js",
      "startedAt": "2026-08-01T14:00:07.886Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 0,
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000005",
      "kind": "tool",
      "label": "MCPTools · focus_nodes|list_runs|find_n…",
      "startedAt": "2026-08-01T14:00:09.386Z",
      "status": "completed",
    },
  ],
}
`;

exports[`cursor parse (IDE) > rejection run: a \`completed\` status with a \`rejected\` outcome → denial node + edge, no unresolved-error 1`] = `
{
  "edges": [
    {
      "from": "t:b0b0b0b0-0000-4000-8000-000000000047",
      "id": "e:sequence:t:b0b0b0b0-0000-4000-8000-000000000047→g:b0b0b0b0-0000-4000-8000-000000000050",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000050",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000050",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000050→g:b0b0b0b0-0000-4000-8000-000000000051",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000051",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000051",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000051→g:b0b0b0b0-0000-4000-8000-000000000052",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000052",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000052",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000052→t:b0b0b0b0-0000-4000-8000-000000000055",
      "kind": "sequence",
      "to": "t:b0b0b0b0-0000-4000-8000-000000000055",
    },
    {
      "from": "t:b0b0b0b0-0000-4000-8000-000000000055",
      "id": "e:sequence:t:b0b0b0b0-0000-4000-8000-000000000055→g:b0b0b0b0-0000-4000-8000-000000000058",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000058",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000058",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000058→h:b0b0b0b0-0000-4000-8000-000000000058",
      "kind": "sequence",
      "to": "h:b0b0b0b0-0000-4000-8000-000000000058",
    },
  ],
  "groups": [],
  "irVersion": 1,
  "meta": {
    "adapter": "cursor",
    "coverage": {
      "records": 14,
      "sourcesUnread": 0,
      "unrecognized": 0,
    },
    "endedAt": "2026-08-01T14:01:33.890Z",
    "ext": {
      "cursor": {
        "_v": 17,
        "agentBackend": "cursor-agent",
        "contextUsage": {
          "percent": 11.6796875,
          "tokenLimit": 256000,
          "tokensUsed": 33654,
        },
        "filesChangedCount": 0,
        "forceMode": "edit",
        "isAgentic": true,
        "model": "grok-4.6",
        "status": "completed",
        "surface": "ide",
        "totalLinesAdded": 0,
        "totalLinesRemoved": 0,
        "unifiedMode": "agent",
      },
    },
    "kind": "session",
    "runId": "cursor:c0c0c0c0-0000-4000-8000-0000000e7ec7",
    "startedAt": "2026-08-01T14:01:15.383Z",
    "title": "Src adapters and coverage",
    "totals": {
      "agents": 0,
      "tokens": 0,
      "toolCalls": 4,
    },
    "unrecognizedLineCount": 0,
  },
  "nodes": [
    {
      "durationMs": 15578,
      "endedAt": "2026-08-01T14:01:27.887Z",
      "hasDetail": true,
      "id": "t:b0b0b0b0-0000-4000-8000-000000000047",
      "kind": "turn",
      "label": "List everything in src/adapters, then read src/coverage.js.",
      "startedAt": "2026-08-01T14:01:15.683Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 0,
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000050",
      "kind": "tool",
      "label": "Glob · **/*",
      "startedAt": "2026-08-01T14:01:20.679Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 0,
      "files": [
        "/home/dev/acme/src/coverage.js",
      ],
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000051",
      "kind": "tool",
      "label": "Read · coverage.js",
      "startedAt": "2026-08-01T14:01:22.179Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 0,
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000052",
      "kind": "tool",
      "label": "MCPTools · focus_nodes|list_runs|find_n…",
      "startedAt": "2026-08-01T14:01:23.679Z",
      "status": "completed",
    },
    {
      "durationMs": 5817,
      "endedAt": "2026-08-01T14:01:33.890Z",
      "hasDetail": true,
      "id": "t:b0b0b0b0-0000-4000-8000-000000000055",
      "kind": "turn",
      "label": "Run: npm test",
      "startedAt": "2026-08-01T14:01:29.387Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 1,
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000058",
      "kind": "tool",
      "label": "Shell · Run npm test suite",
      "startedAt": "2026-08-01T14:01:32.388Z",
      "status": "error",
    },
    {
      "hasDetail": true,
      "id": "h:b0b0b0b0-0000-4000-8000-000000000058",
      "interventionKind": "denial",
      "kind": "human",
      "label": "denied Shell",
      "startedAt": "2026-08-01T14:01:32.388Z",
      "status": "completed",
    },
  ],
}
`;

exports[`cursor parse (IDE) > subagents: lanes, spawn/return edges, both discovery routes, and a missing child as sourcesUnread 1`] = `
{
  "edges": [
    {
      "from": "t:b0b0b0b0-0000-4000-8000-000000000066",
      "id": "e:sequence:t:b0b0b0b0-0000-4000-8000-000000000066→g:b0b0b0b0-0000-4000-8000-000000000069",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000069",
    },
    {
      "from": "a:task-c0c0c0c0-0000-4000-8000-0000005ab001",
      "id": "e:sequence:a:task-c0c0c0c0-0000-4000-8000-0000005ab001→t:b0b0b0b0-0000-4000-8000-000000000073",
      "kind": "sequence",
      "to": "t:b0b0b0b0-0000-4000-8000-000000000073",
    },
    {
      "from": "t:b0b0b0b0-0000-4000-8000-000000000073",
      "id": "e:sequence:t:b0b0b0b0-0000-4000-8000-000000000073→g:b0b0b0b0-0000-4000-8000-000000000075",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000075",
    },
    {
      "from": "t:b0b0b0b0-0000-4000-8000-000000000066",
      "id": "e:spawn:t:b0b0b0b0-0000-4000-8000-000000000066→a:task-c0c0c0c0-0000-4000-8000-0000005ab001",
      "kind": "spawn",
      "label": "Read src/adapters/hermes and report issues.",
      "to": "a:task-c0c0c0c0-0000-4000-8000-0000005ab001",
    },
    {
      "from": "a:task-c0c0c0c0-0000-4000-8000-0000005ab001",
      "id": "e:return:a:task-c0c0c0c0-0000-4000-8000-0000005ab001→t:b0b0b0b0-0000-4000-8000-000000000066",
      "kind": "return",
      "label": "hermes adapter: no issues found.",
      "to": "t:b0b0b0b0-0000-4000-8000-000000000066",
    },
    {
      "from": "a:c0c0c0c0-0000-4000-8000-0000005ab011",
      "id": "e:sequence:a:c0c0c0c0-0000-4000-8000-0000005ab011→t:b0b0b0b0-0000-4000-8000-000000000078",
      "kind": "sequence",
      "to": "t:b0b0b0b0-0000-4000-8000-000000000078",
    },
    {
      "from": "t:b0b0b0b0-0000-4000-8000-000000000078",
      "id": "e:sequence:t:b0b0b0b0-0000-4000-8000-000000000078→g:b0b0b0b0-0000-4000-8000-000000000079",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000079",
    },
    {
      "from": "t:b0b0b0b0-0000-4000-8000-000000000073",
      "id": "e:spawn:t:b0b0b0b0-0000-4000-8000-000000000073→a:c0c0c0c0-0000-4000-8000-0000005ab011",
      "kind": "spawn",
      "label": "List tests/fixtures/hermes.",
      "to": "a:c0c0c0c0-0000-4000-8000-0000005ab011",
    },
    {
      "from": "a:c0c0c0c0-0000-4000-8000-0000005ab011",
      "id": "e:return:a:c0c0c0c0-0000-4000-8000-0000005ab011→t:b0b0b0b0-0000-4000-8000-000000000073",
      "kind": "return",
      "label": "Two files.",
      "to": "t:b0b0b0b0-0000-4000-8000-000000000073",
    },
    {
      "from": "a:c0c0c0c0-0000-4000-8000-0000005ab002",
      "id": "e:sequence:a:c0c0c0c0-0000-4000-8000-0000005ab002→t:b0b0b0b0-0000-4000-8000-000000000081",
      "kind": "sequence",
      "to": "t:b0b0b0b0-0000-4000-8000-000000000081",
    },
    {
      "from": "t:b0b0b0b0-0000-4000-8000-000000000081",
      "id": "e:sequence:t:b0b0b0b0-0000-4000-8000-000000000081→g:b0b0b0b0-0000-4000-8000-000000000083",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000083",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000083",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000083→g:b0b0b0b0-0000-4000-8000-000000000084",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000084",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000084",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000084→h:c0c0c0c0-0000-4000-8000-0000005ab002:interrupt",
      "kind": "sequence",
      "reason": "after Shell error",
      "to": "h:c0c0c0c0-0000-4000-8000-0000005ab002:interrupt",
    },
    {
      "from": "t:b0b0b0b0-0000-4000-8000-000000000066",
      "id": "e:spawn:t:b0b0b0b0-0000-4000-8000-000000000066→a:c0c0c0c0-0000-4000-8000-0000005ab002",
      "kind": "spawn",
      "label": "Read src/adapters/opencode and report issues.",
      "to": "a:c0c0c0c0-0000-4000-8000-0000005ab002",
    },
    {
      "from": "a:c0c0c0c0-0000-4000-8000-0000005ab002",
      "id": "e:return:a:c0c0c0c0-0000-4000-8000-0000005ab002→t:b0b0b0b0-0000-4000-8000-000000000066",
      "kind": "return",
      "to": "t:b0b0b0b0-0000-4000-8000-000000000066",
    },
  ],
  "groups": [
    {
      "id": "lane:a:task-c0c0c0c0-0000-4000-8000-0000005ab001",
      "label": "Audit hermes adapter",
    },
    {
      "id": "lane:a:c0c0c0c0-0000-4000-8000-0000005ab011",
      "label": "Check hermes fixtures",
    },
    {
      "id": "lane:a:c0c0c0c0-0000-4000-8000-0000005ab002",
      "label": "Audit opencode adapter",
    },
  ],
  "irVersion": 1,
  "meta": {
    "adapter": "cursor",
    "coverage": {
      "records": 19,
      "sourcesUnread": 1,
      "unrecognized": 0,
    },
    "endedAt": "2026-08-01T14:02:05.890Z",
    "ext": {
      "cursor": {
        "_v": 17,
        "agentBackend": "cursor-agent",
        "contextUsage": {
          "percent": 11.6796875,
          "tokenLimit": 256000,
          "tokensUsed": 29900,
        },
        "filesChangedCount": 0,
        "forceMode": "edit",
        "isAgentic": true,
        "missingChildComposers": [
          "c0c0c0c0-0000-4000-8000-0000005ab0ff",
        ],
        "model": "grok-4.6",
        "status": "completed",
        "surface": "ide",
        "totalLinesAdded": 0,
        "totalLinesRemoved": 0,
        "unifiedMode": "triage",
      },
    },
    "kind": "session",
    "runId": "cursor:c0c0c0c0-0000-4000-8000-0000005ab000",
    "startedAt": "2026-08-01T14:01:41.990Z",
    "title": "Parallel adapter audit",
    "totals": {
      "agents": 3,
      "tokens": 0,
      "toolCalls": 7,
    },
    "unrecognizedLineCount": 0,
  },
  "nodes": [
    {
      "durationMs": 42000,
      "endedAt": "2026-08-01T14:01:49.890Z",
      "hasDetail": true,
      "id": "t:b0b0b0b0-0000-4000-8000-000000000066",
      "kind": "turn",
      "label": "Audit the adapters in parallel: one subagent per adapter, then summarize.",
      "startedAt": "2026-08-01T14:01:42.290Z",
      "status": "completed",
    },
    {
      "callCount": 2,
      "errorCount": 0,
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000069",
      "kind": "tool",
      "label": "Task ×2",
      "startedAt": "2026-08-01T14:01:46.490Z",
      "status": "completed",
    },
    {
      "agentId": "task-c0c0c0c0-0000-4000-8000-0000005ab001",
      "endedAt": "2026-08-01T14:02:19.890Z",
      "ext": {
        "cursor": {
          "status": "completed",
        },
      },
      "files": [
        "/home/dev/acme/src/adapters/hermes/parse.js",
        "/home/dev/acme/src/adapters/hermes/detect.js",
      ],
      "group": "lane:a:task-c0c0c0c0-0000-4000-8000-0000005ab001",
      "hasDetail": true,
      "id": "a:task-c0c0c0c0-0000-4000-8000-0000005ab001",
      "kind": "agent",
      "label": "Audit hermes adapter",
      "model": "grok-4.6",
      "startedAt": "2026-08-01T14:01:46.540Z",
      "status": "completed",
    },
    {
      "durationMs": 9000,
      "endedAt": "2026-08-01T14:01:56.390Z",
      "group": "lane:a:task-c0c0c0c0-0000-4000-8000-0000005ab001",
      "hasDetail": true,
      "id": "t:b0b0b0b0-0000-4000-8000-000000000073",
      "kind": "turn",
      "label": "Read src/adapters/hermes and report issues.",
      "startedAt": "2026-08-01T14:01:51.390Z",
      "status": "completed",
    },
    {
      "callCount": 2,
      "errorCount": 0,
      "files": [
        "/home/dev/acme/src/adapters/hermes/parse.js",
        "/home/dev/acme/src/adapters/hermes/detect.js",
      ],
      "group": "lane:a:task-c0c0c0c0-0000-4000-8000-0000005ab001",
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000075",
      "kind": "tool",
      "label": "Read · parse.js ×2",
      "startedAt": "2026-08-01T14:01:53.390Z",
      "status": "completed",
    },
    {
      "agentId": "c0c0c0c0-0000-4000-8000-0000005ab011",
      "endedAt": "2026-08-01T14:02:09.890Z",
      "ext": {
        "cursor": {
          "status": "completed",
        },
      },
      "group": "lane:a:c0c0c0c0-0000-4000-8000-0000005ab011",
      "hasDetail": true,
      "id": "a:c0c0c0c0-0000-4000-8000-0000005ab011",
      "kind": "agent",
      "label": "Check hermes fixtures",
      "model": "grok-4.6",
      "startedAt": "2026-08-01T14:01:53.440Z",
      "status": "completed",
    },
    {
      "durationMs": 1500,
      "endedAt": "2026-08-01T14:02:00.890Z",
      "group": "lane:a:c0c0c0c0-0000-4000-8000-0000005ab011",
      "hasDetail": true,
      "id": "t:b0b0b0b0-0000-4000-8000-000000000078",
      "kind": "turn",
      "label": "List tests/fixtures/hermes.",
      "startedAt": "2026-08-01T14:01:57.890Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 0,
      "group": "lane:a:c0c0c0c0-0000-4000-8000-0000005ab011",
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000079",
      "kind": "tool",
      "label": "Glob · **/*",
      "startedAt": "2026-08-01T14:01:59.390Z",
      "status": "completed",
    },
    {
      "agentId": "c0c0c0c0-0000-4000-8000-0000005ab002",
      "endedAt": "2026-08-01T14:02:29.890Z",
      "ext": {
        "cursor": {
          "status": "aborted",
        },
      },
      "files": [
        "/home/dev/acme/src/adapters/opencode/parse.js",
      ],
      "group": "lane:a:c0c0c0c0-0000-4000-8000-0000005ab002",
      "hasDetail": true,
      "id": "a:c0c0c0c0-0000-4000-8000-0000005ab002",
      "kind": "agent",
      "label": "Audit opencode adapter",
      "model": "grok-4.6",
      "startedAt": "2026-08-01T14:01:48.040Z",
      "status": "completed",
    },
    {
      "endedAt": "2026-08-01T14:02:05.890Z",
      "group": "lane:a:c0c0c0c0-0000-4000-8000-0000005ab002",
      "hasDetail": true,
      "id": "t:b0b0b0b0-0000-4000-8000-000000000081",
      "kind": "turn",
      "label": "Read src/adapters/opencode and report issues.",
      "startedAt": "2026-08-01T14:02:02.390Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 0,
      "files": [
        "/home/dev/acme/src/adapters/opencode/parse.js",
      ],
      "group": "lane:a:c0c0c0c0-0000-4000-8000-0000005ab002",
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000083",
      "kind": "tool",
      "label": "Read · parse.js",
      "startedAt": "2026-08-01T14:02:04.390Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 1,
      "group": "lane:a:c0c0c0c0-0000-4000-8000-0000005ab002",
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000084",
      "kind": "tool",
      "label": "Shell · Probe the schema",
      "startedAt": "2026-08-01T14:02:05.890Z",
      "status": "error",
    },
    {
      "group": "lane:a:c0c0c0c0-0000-4000-8000-0000005ab002",
      "hasDetail": true,
      "id": "h:c0c0c0c0-0000-4000-8000-0000005ab002:interrupt",
      "interventionKind": "interrupt",
      "kind": "human",
      "label": "interrupted the run",
      "startedAt": "2026-08-01T14:02:05.890Z",
      "status": "completed",
    },
  ],
}
`;

exports[`cursor parse (IDE) > trouble run: the expected IR — error, rejected, cancelled and abort, each with its edge 1`] = `
{
  "edges": [
    {
      "from": "t:b0b0b0b0-0000-4000-8000-000000000008",
      "id": "e:sequence:t:b0b0b0b0-0000-4000-8000-000000000008→g:b0b0b0b0-0000-4000-8000-000000000011",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000011",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000011",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000011→g:b0b0b0b0-0000-4000-8000-000000000012",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000012",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000012",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000012→g:b0b0b0b0-0000-4000-8000-000000000013",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000013",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000013",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000013→g:b0b0b0b0-0000-4000-8000-000000000016",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000016",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000016",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000016→g:b0b0b0b0-0000-4000-8000-000000000017",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000017",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000017",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000017→g:b0b0b0b0-0000-4000-8000-000000000018",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000018",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000018",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000018→g:b0b0b0b0-0000-4000-8000-000000000020",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000020",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000020",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000020→g:b0b0b0b0-0000-4000-8000-000000000024",
      "kind": "sequence",
      "reason": "after Read error",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000024",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000024",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000024→g:b0b0b0b0-0000-4000-8000-000000000025",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000025",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000025",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000025→g:b0b0b0b0-0000-4000-8000-000000000027",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000027",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000027",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000027→g:b0b0b0b0-0000-4000-8000-000000000032",
      "kind": "sequence",
      "reason": "after Shell error",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000032",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000032",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000032→g:b0b0b0b0-0000-4000-8000-000000000033",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000033",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000033",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000033→h:b0b0b0b0-0000-4000-8000-000000000037",
      "kind": "sequence",
      "to": "h:b0b0b0b0-0000-4000-8000-000000000037",
    },
    {
      "from": "h:b0b0b0b0-0000-4000-8000-000000000037",
      "id": "e:sequence:h:b0b0b0b0-0000-4000-8000-000000000037→g:b0b0b0b0-0000-4000-8000-000000000039",
      "kind": "sequence",
      "reason": "after permission denial",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000039",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000039",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000039→g:b0b0b0b0-0000-4000-8000-000000000041",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000041",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000041",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000041→g:b0b0b0b0-0000-4000-8000-000000000046",
      "kind": "sequence",
      "to": "g:b0b0b0b0-0000-4000-8000-000000000046",
    },
    {
      "from": "g:b0b0b0b0-0000-4000-8000-000000000046",
      "id": "e:sequence:g:b0b0b0b0-0000-4000-8000-000000000046→h:b0b0b0b0-0000-4000-8000-000000000046",
      "kind": "sequence",
      "to": "h:b0b0b0b0-0000-4000-8000-000000000046",
    },
    {
      "from": "h:b0b0b0b0-0000-4000-8000-000000000046",
      "id": "e:sequence:h:b0b0b0b0-0000-4000-8000-000000000046→h:c0c0c0c0-0000-4000-8000-000000780b1e:interrupt",
      "kind": "sequence",
      "reason": "after permission denial",
      "to": "h:c0c0c0c0-0000-4000-8000-000000780b1e:interrupt",
    },
  ],
  "groups": [],
  "irVersion": 1,
  "meta": {
    "adapter": "cursor",
    "coverage": {
      "records": 39,
      "sourcesUnread": 0,
      "unrecognized": 0,
    },
    "endedAt": "2026-08-01T14:01:14.183Z",
    "ext": {
      "cursor": {
        "_v": 17,
        "agentBackend": "cursor-agent",
        "contextUsage": {
          "percent": 30.19375,
          "tokenLimit": 256000,
          "tokensUsed": 77296,
        },
        "filesChangedCount": 0,
        "forceMode": "edit",
        "isAgentic": true,
        "isArchived": true,
        "model": "grok-4.6",
        "status": "aborted",
        "surface": "ide",
        "totalLinesAdded": 0,
        "totalLinesRemoved": 0,
        "unifiedMode": "agent",
      },
    },
    "kind": "session",
    "runId": "cursor:c0c0c0c0-0000-4000-8000-000000780b1e",
    "startedAt": "2026-08-01T14:00:12.087Z",
    "title": "Auto run settings",
    "totals": {
      "agents": 0,
      "tokens": 0,
      "toolCalls": 27,
    },
    "unrecognizedLineCount": 0,
  },
  "nodes": [
    {
      "endedAt": "2026-08-01T14:01:14.183Z",
      "hasDetail": true,
      "id": "t:b0b0b0b0-0000-4000-8000-000000000008",
      "kind": "turn",
      "label": "ensure auto run is off",
      "startedAt": "2026-08-01T14:00:12.387Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 0,
      "files": [
        "/home/dev/acme/.cursor/skills/SKILL.md",
      ],
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000011",
      "kind": "tool",
      "label": "Read · SKILL.md",
      "startedAt": "2026-08-01T14:00:18.217Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 0,
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000012",
      "kind": "tool",
      "label": "MCPTools · auto.?run|settings",
      "startedAt": "2026-08-01T14:00:19.717Z",
      "status": "completed",
    },
    {
      "callCount": 2,
      "errorCount": 0,
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000013",
      "kind": "tool",
      "label": "Grep · autoRun|auto.?run|yolo ×2",
      "startedAt": "2026-08-01T14:00:21.217Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 0,
      "files": [
        "/home/dev/acme/.cursor/settings.json",
      ],
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000016",
      "kind": "tool",
      "label": "Read · settings.json",
      "startedAt": "2026-08-01T14:00:25.782Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 0,
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000017",
      "kind": "tool",
      "label": "Glob · **/*",
      "startedAt": "2026-08-01T14:00:27.282Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 0,
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000018",
      "kind": "tool",
      "label": "search_conversations",
      "startedAt": "2026-08-01T14:00:28.782Z",
      "status": "completed",
    },
    {
      "callCount": 3,
      "errorCount": 1,
      "files": [
        "/home/dev/acme/.cursor/skills/SKILL.md",
        "/home/dev/acme/.cursor/skills-cursor/missing/SKILL.md",
        "/home/dev/acme/package.json",
      ],
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000020",
      "kind": "tool",
      "label": "Read · SKILL.md ×3",
      "startedAt": "2026-08-01T14:00:31.267Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 0,
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000024",
      "kind": "tool",
      "label": "Glob · **/*permission*",
      "startedAt": "2026-08-01T14:00:35.769Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 0,
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000025",
      "kind": "tool",
      "label": "Grep · permissions\\.json|approvalMode",
      "startedAt": "2026-08-01T14:00:37.269Z",
      "status": "completed",
    },
    {
      "callCount": 4,
      "errorCount": 1,
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000027",
      "kind": "tool",
      "label": "Shell · Query Cursor state DB for auto-… ×4",
      "startedAt": "2026-08-01T14:00:43.685Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 0,
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000032",
      "kind": "tool",
      "label": "Grep · ~/.cursor/permissions|userPermis…",
      "startedAt": "2026-08-01T14:00:49.688Z",
      "status": "completed",
    },
    {
      "callCount": 4,
      "errorCount": 1,
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000033",
      "kind": "tool",
      "label": "Shell · Extract Auto-Run setting strings ×4",
      "startedAt": "2026-08-01T14:00:51.188Z",
      "status": "completed",
    },
    {
      "hasDetail": true,
      "id": "h:b0b0b0b0-0000-4000-8000-000000000037",
      "interventionKind": "denial",
      "kind": "human",
      "label": "denied Shell",
      "startedAt": "2026-08-01T14:00:55.690Z",
      "status": "completed",
    },
    {
      "callCount": 2,
      "errorCount": 0,
      "files": [
        "/home/dev/acme/.cursor/agent-cli-state.json",
      ],
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000039",
      "kind": "tool",
      "label": "Read · agent-cli-state.json ×2",
      "startedAt": "2026-08-01T14:00:57.192Z",
      "status": "completed",
    },
    {
      "callCount": 3,
      "errorCount": 0,
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000041",
      "kind": "tool",
      "label": "Shell · List cursor state tables ×3",
      "startedAt": "2026-08-01T14:01:00.192Z",
      "status": "completed",
    },
    {
      "callCount": 1,
      "errorCount": 1,
      "files": [
        "/home/dev/acme/.cursor/permissions.json",
      ],
      "hasDetail": true,
      "id": "g:b0b0b0b0-0000-4000-8000-000000000046",
      "kind": "tool",
      "label": "Edit · permissions.json",
      "startedAt": "2026-08-01T14:01:14.183Z",
      "status": "error",
    },
    {
      "hasDetail": true,
      "id": "h:b0b0b0b0-0000-4000-8000-000000000046",
      "interventionKind": "denial",
      "kind": "human",
      "label": "denied Edit",
      "startedAt": "2026-08-01T14:01:14.183Z",
      "status": "completed",
    },
    {
      "hasDetail": true,
      "id": "h:c0c0c0c0-0000-4000-8000-000000780b1e:interrupt",
      "interventionKind": "interrupt",
      "kind": "human",
      "label": "interrupted the run",
      "startedAt": "2026-08-01T14:01:14.183Z",
      "status": "completed",
    },
  ],
}
`;
